# MuLoCo

./: .gitignore  CONTRIBUTING.md  README.md  install_dependencies.sh  pyproject.toml  setup.sh  setup_dataset.sh
lm-evaluation-harness/: test.py
lm-evaluation-harness/lm_eval/: evaluator.py
lm-evaluation-harness/lm_eval/tasks/pubmedqa/: pubmedqa.yaml
torchft/: README.md
torchft/torchft/: futures.py  local_sgd.py  manager.py  process_group.py
torchtitan/: .gitignore  CODE_OF_CONDUCT.md  README.md  RUNNING_JOBS.md  generate_job_file.py  launch_diloco_multinode.py  launch_distributed.py  quantization.py  requirements-dev.txt  run_train.sh
torchtitan/config/: base.py
torchtitan/config/ddp/: 1gpu_test.py  8gpu_test_15B.py  8gpu_test_3B.py  adamw.py  muon.py
torchtitan/config/diloco/: 2x_4gpu_diloco.py  2x_4gpu_diloco_quantized_outer.py  2x_4gpu_diloco_streaming.py  2x_4gpu_gpa.py  2x_4gpu_muloco.py  2x_4gpu_muloco_quantized_outer.py  2x_4gpu_muloco_streaming.py
torchtitan/docs/: torchft.md
torchtitan/jobs/ddp/: run_1gpu_test.sh  run_8gpu_test_muon.sh
torchtitan/jobs/diloco/: debug_8workers_x1gpu.sh
torchtitan/jobs/muloco_paper/: ddp_baselines_h100.py  diloco_muloco_no-compression_h100.py  inner_sweep_distributed_quantized_streaming.py  inner_sweep_distributed_quantized_topk.py  model_map.py
torchtitan/scripts/: gg copy.txt  gg.txt
torchtitan/tests/unit_tests/: test_muon_checkpointing.py
torchtitan/torchtitan/: config_manager.py  train.py
torchtitan/torchtitan/components/: checkpoint.py  fragment.py  ft.py  lm_eval_helper.py  lr_scheduler.py  metrics.py  optimizer.py  quantized_outer_sgd.py
torchtitan/torchtitan/datasets/: hf_datasets.py
torchtitan/torchtitan/distributed/: parallel_dims.py  utils.py
torchtitan/torchtitan/experiments/: __init__.py
torchtitan/torchtitan/experiments/dion_optimizer/: muon.py  parameter_classification.py  polar_express_triton.py  scalar_opts.py  titan_dion.py  titan_muon.py
torchtitan/torchtitan/experiments/kernels/cute/: dense_gemm.py
torchtitan/torchtitan/models/llama3/: __init__.py
torchtitan/torchtitan/models/llama3/model/: args.py  model.py
torchtitan/torchtitan/models/llama3/train_configs/: ddp_180m.toml  ddp_180m_1gpu.toml  diloco_180m.toml  llama3_8b.toml
torchtitan/torchtitan/protocols/: train_spec.py
torchtitan/torchtitan/tools/: profiling.py  utils.py
